seaqt/QtGui/gen_qaccessible.nim


type cQAccessibleTableModelChangeEventVTable {.pure.} = object
  destructor*: proc(self: pointer) {.cdecl, raises:[], gcsafe.}
  accessibleInterface*: proc(self: pointer): pointer {.cdecl, raises: [], gcsafe.}
proc fcQAccessibleTableModelChangeEvent_virtualbase_accessibleInterface(self: pointer): pointer {.importc: "QAccessibleTableModelChangeEvent_virtualbase_accessibleInterface".}
proc fcQAccessibleTableModelChangeEvent_new(vtbl: pointer, vdata: csize_t, obj: pointer, changeType: cint): ptr cQAccessibleTableModelChangeEvent {.importc: "QAccessibleTableModelChangeEvent_new".}
proc fcQAccessibleTableModelChangeEvent_new2(vtbl: pointer, vdata: csize_t, iface: pointer, changeType: cint): ptr cQAccessibleTableModelChangeEvent {.importc: "QAccessibleTableModelChangeEvent_new2".}
proc fcQAccessibleState_disabled(self: pointer): culonglong {.importc: "QAccessible__State_disabled".}
proc fcQAccessibleState_setDisabled(self: pointer, disabled: culonglong): void {.importc: "QAccessible__State_setDisabled".}
proc fcQAccessibleState_selected(self: pointer): culonglong {.importc: "QAccessible__State_selected".}
proc fcQAccessibleState_setSelected(self: pointer, selected: culonglong): void {.importc: "QAccessible__State_setSelected".}
proc fcQAccessibleState_focusable(self: pointer): culonglong {.importc: "QAccessible__State_focusable".}
proc fcQAccessibleState_setFocusable(self: pointer, focusable: culonglong): void {.importc: "QAccessible__State_setFocusable".}
proc fcQAccessibleState_focused(self: pointer): culonglong {.importc: "QAccessible__State_focused".}
proc fcQAccessibleState_setFocused(self: pointer, focused: culonglong): void {.importc: "QAccessible__State_setFocused".}
proc fcQAccessibleState_pressed(self: pointer): culonglong {.importc: "QAccessible__State_pressed".}
proc fcQAccessibleState_setPressed(self: pointer, pressed: culonglong): void {.importc: "QAccessible__State_setPressed".}
proc fcQAccessibleState_checkable(self: pointer): culonglong {.importc: "QAccessible__State_checkable".}
proc fcQAccessibleState_setCheckable(self: pointer, checkable: culonglong): void {.importc: "QAccessible__State_setCheckable".}
proc fcQAccessibleState_checked(self: pointer): culonglong {.importc: "QAccessible__State_checked".}
proc fcQAccessibleState_setChecked(self: pointer, checked: culonglong): void {.importc: "QAccessible__State_setChecked".}
proc fcQAccessibleState_checkStateMixed(self: pointer): culonglong {.importc: "QAccessible__State_checkStateMixed".}
proc fcQAccessibleState_setCheckStateMixed(self: pointer, checkStateMixed: culonglong): void {.importc: "QAccessible__State_setCheckStateMixed".}
proc fcQAccessibleState_readOnly(self: pointer): culonglong {.importc: "QAccessible__State_readOnly".}
proc fcQAccessibleState_setReadOnly(self: pointer, readOnly: culonglong): void {.importc: "QAccessible__State_setReadOnly".}
proc fcQAccessibleState_hotTracked(self: pointer): culonglong {.importc: "QAccessible__State_hotTracked".}
proc fcQAccessibleState_setHotTracked(self: pointer, hotTracked: culonglong): void {.importc: "QAccessible__State_setHotTracked".}
proc fcQAccessibleState_defaultButton(self: pointer): culonglong {.importc: "QAccessible__State_defaultButton".}
proc fcQAccessibleState_setDefaultButton(self: pointer, defaultButton: culonglong): void {.importc: "QAccessible__State_setDefaultButton".}
proc fcQAccessibleState_expanded(self: pointer): culonglong {.importc: "QAccessible__State_expanded".}
proc fcQAccessibleState_setExpanded(self: pointer, expanded: culonglong): void {.importc: "QAccessible__State_setExpanded".}
proc fcQAccessibleState_collapsed(self: pointer): culonglong {.importc: "QAccessible__State_collapsed".}
proc fcQAccessibleState_setCollapsed(self: pointer, collapsed: culonglong): void {.importc: "QAccessible__State_setCollapsed".}
proc fcQAccessibleState_busy(self: pointer): culonglong {.importc: "QAccessible__State_busy".}
proc fcQAccessibleState_setBusy(self: pointer, busy: culonglong): void {.importc: "QAccessible__State_setBusy".}
proc fcQAccessibleState_expandable(self: pointer): culonglong {.importc: "QAccessible__State_expandable".}
proc fcQAccessibleState_setExpandable(self: pointer, expandable: culonglong): void {.importc: "QAccessible__State_setExpandable".}
proc fcQAccessibleState_marqueed(self: pointer): culonglong {.importc: "QAccessible__State_marqueed".}
proc fcQAccessibleState_setMarqueed(self: pointer, marqueed: culonglong): void {.importc: "QAccessible__State_setMarqueed".}
proc fcQAccessibleState_animated(self: pointer): culonglong {.importc: "QAccessible__State_animated".}
proc fcQAccessibleState_setAnimated(self: pointer, animated: culonglong): void {.importc: "QAccessible__State_setAnimated".}
proc fcQAccessibleState_invisible(self: pointer): culonglong {.importc: "QAccessible__State_invisible".}
proc fcQAccessibleState_setInvisible(self: pointer, invisible: culonglong): void {.importc: "QAccessible__State_setInvisible".}
proc fcQAccessibleState_offscreen(self: pointer): culonglong {.importc: "QAccessible__State_offscreen".}
proc fcQAccessibleState_setOffscreen(self: pointer, offscreen: culonglong): void {.importc: "QAccessible__State_setOffscreen".}
proc fcQAccessibleState_sizeable(self: pointer): culonglong {.importc: "QAccessible__State_sizeable".}
proc fcQAccessibleState_setSizeable(self: pointer, sizeable: culonglong): void {.importc: "QAccessible__State_setSizeable".}
proc fcQAccessibleState_movable(self: pointer): culonglong {.importc: "QAccessible__State_movable".}
proc fcQAccessibleState_setMovable(self: pointer, movable: culonglong): void {.importc: "QAccessible__State_setMovable".}
proc fcQAccessibleState_selfVoicing(self: pointer): culonglong {.importc: "QAccessible__State_selfVoicing".}
proc fcQAccessibleState_setSelfVoicing(self: pointer, selfVoicing: culonglong): void {.importc: "QAccessible__State_setSelfVoicing".}
proc fcQAccessibleState_selectable(self: pointer): culonglong {.importc: "QAccessible__State_selectable".}
proc fcQAccessibleState_setSelectable(self: pointer, selectable: culonglong): void {.importc: "QAccessible__State_setSelectable".}
proc fcQAccessibleState_linked(self: pointer): culonglong {.importc: "QAccessible__State_linked".}
proc fcQAccessibleState_setLinked(self: pointer, linked: culonglong): void {.importc: "QAccessible__State_setLinked".}
proc fcQAccessibleState_traversed(self: pointer): culonglong {.importc: "QAccessible__State_traversed".}
proc fcQAccessibleState_setTraversed(self: pointer, traversed: culonglong): void {.importc: "QAccessible__State_setTraversed".}
proc fcQAccessibleState_multiSelectable(self: pointer): culonglong {.importc: "QAccessible__State_multiSelectable".}
proc fcQAccessibleState_setMultiSelectable(self: pointer, multiSelectable: culonglong): void {.importc: "QAccessible__State_setMultiSelectable".}
proc fcQAccessibleState_extSelectable(self: pointer): culonglong {.importc: "QAccessible__State_extSelectable".}
proc fcQAccessibleState_setExtSelectable(self: pointer, extSelectable: culonglong): void {.importc: "QAccessible__State_setExtSelectable".}
proc fcQAccessibleState_passwordEdit(self: pointer): culonglong {.importc: "QAccessible__State_passwordEdit".}
proc fcQAccessibleState_setPasswordEdit(self: pointer, passwordEdit: culonglong): void {.importc: "QAccessible__State_setPasswordEdit".}
proc fcQAccessibleState_hasPopup(self: pointer): culonglong {.importc: "QAccessible__State_hasPopup".}
proc fcQAccessibleState_setHasPopup(self: pointer, hasPopup: culonglong): void {.importc: "QAccessible__State_setHasPopup".}
proc fcQAccessibleState_modal(self: pointer): culonglong {.importc: "QAccessible__State_modal".}
proc fcQAccessibleState_setModal(self: pointer, modal: culonglong): void {.importc: "QAccessible__State_setModal".}
proc fcQAccessibleState_active(self: pointer): culonglong {.importc: "QAccessible__State_active".}
proc fcQAccessibleState_setActive(self: pointer, active: culonglong): void {.importc: "QAccessible__State_setActive".}
proc fcQAccessibleState_invalid(self: pointer): culonglong {.importc: "QAccessible__State_invalid".}
proc fcQAccessibleState_setInvalid(self: pointer, invalid: culonglong): void {.importc: "QAccessible__State_setInvalid".}
proc fcQAccessibleState_editable(self: pointer): culonglong {.importc: "QAccessible__State_editable".}
proc fcQAccessibleState_setEditable(self: pointer, editable: culonglong): void {.importc: "QAccessible__State_setEditable".}
proc fcQAccessibleState_multiLine(self: pointer): culonglong {.importc: "QAccessible__State_multiLine".}
proc fcQAccessibleState_setMultiLine(self: pointer, multiLine: culonglong): void {.importc: "QAccessible__State_setMultiLine".}
proc fcQAccessibleState_selectableText(self: pointer): culonglong {.importc: "QAccessible__State_selectableText".}
proc fcQAccessibleState_setSelectableText(self: pointer, selectableText: culonglong): void {.importc: "QAccessible__State_setSelectableText".}
proc fcQAccessibleState_supportsAutoCompletion(self: pointer): culonglong {.importc: "QAccessible__State_supportsAutoCompletion".}
proc fcQAccessibleState_setSupportsAutoCompletion(self: pointer, supportsAutoCompletion: culonglong): void {.importc: "QAccessible__State_setSupportsAutoCompletion".}
proc fcQAccessibleState_searchEdit(self: pointer): culonglong {.importc: "QAccessible__State_searchEdit".}
proc fcQAccessibleState_setSearchEdit(self: pointer, searchEdit: culonglong): void {.importc: "QAccessible__State_setSearchEdit".}
proc fcQAccessibleState_new(): ptr cQAccessibleState {.importc: "QAccessible__State_new".}
proc fcQAccessibleState_new2(param1: pointer): ptr cQAccessibleState {.importc: "QAccessible__State_new2".}
proc fcQAccessibleActivationObserver_accessibilityActiveChanged(self: pointer, active: bool): void {.importc: "QAccessible__ActivationObserver_accessibilityActiveChanged".}
proc fcQAccessibleActivationObserver_operatorAssign(self: pointer, param1: pointer): void {.importc: "QAccessible__ActivationObserver_operatorAssign".}

proc installActivationObserver*(_: type gen_qaccessible_types.QAccessible, param1: gen_qaccessible_types.QAccessibleActivationObserver): void =
  fcQAccessible_installActivationObserver(param1.h)

proc removeActivationObserver*(_: type gen_qaccessible_types.QAccessible, param1: gen_qaccessible_types.QAccessibleActivationObserver): void =
  fcQAccessible_removeActivationObserver(param1.h)

proc queryAccessibleInterface*(_: type gen_qaccessible_types.QAccessible, param1: gen_qobject_types.QObject): gen_qaccessible_types.QAccessibleInterface =
  gen_qaccessible_types.QAccessibleInterface(h: fcQAccessible_queryAccessibleInterface(param1.h), owned: false)

proc uniqueId*(_: type gen_qaccessible_types.QAccessible, iface: gen_qaccessible_types.QAccessibleInterface): cuint =
  fcQAccessible_uniqueId(iface.h)

proc accessibleInterface*(_: type gen_qaccessible_types.QAccessible, uniqueId: cuint): gen_qaccessible_types.QAccessibleInterface =
  gen_qaccessible_types.QAccessibleInterface(h: fcQAccessible_accessibleInterface(uniqueId), owned: false)

proc registerAccessibleInterface*(_: type gen_qaccessible_types.QAccessible, iface: gen_qaccessible_types.QAccessibleInterface): cuint =
  fcQAccessible_registerAccessibleInterface(iface.h)

proc deleteAccessibleInterface*(_: type gen_qaccessible_types.QAccessible, uniqueId: cuint): void =
  fcQAccessible_deleteAccessibleInterface(uniqueId)

proc updateAccessibility*(_: type gen_qaccessible_types.QAccessible, event: gen_qaccessible_types.QAccessibleEvent): void =
  fcQAccessible_updateAccessibility(event.h)

proc isActive*(_: type gen_qaccessible_types.QAccessible): bool =
  fcQAccessible_isActive()

proc setActive*(_: type gen_qaccessible_types.QAccessible, active: bool): void =
  fcQAccessible_setActive(active)

proc setRootObject*(_: type gen_qaccessible_types.QAccessible, objectVal: gen_qobject_types.QObject): void =
  fcQAccessible_setRootObject(objectVal.h)
